--- a/src/AppBundle/Resources/views/Observation/observation.html.twig
+++ b/src/AppBundle/Resources/views/Observation/observation.html.twig
@@ -19,6 +19,7 @@
     {{ form_row(form.birdName) }}
     {{ form_row(form.date) }}
     {{ form_row(form.comment) }}
+    {{ form_row(form.image) }}
     {{ form_row(form.save) }}
     {{ form_rest(form) }}
     {{ form_end(form) }}
