--- a/src/AppBundle/Resources/views/Observation/observation.html.twig
+++ b/src/AppBundle/Resources/views/Observation/observation.html.twig
@@ -20,7 +20,7 @@
     {{ form_row(form.date) }}
     {{ form_row(form.comment) }}
     {{ form_row(form.image) }}
-    <img id="blah" src="#" />
+    <img id="aperçuImage" src="#" />
     {{ form_row(form.save) }}
     {{ form_rest(form) }}
     {{ form_end(form) }}
@@ -32,7 +32,7 @@
             var reader = new FileReader();
             
             reader.onload = function (e) {
-                $('#blah').attr('src', e.target.result);
+                $('#aperçuImage').attr('src', e.target.result);
             }
             
             reader.readAsDataURL(input.files[0]);
