--- a/src/AppBundle/Resources/views/Observation/observation.html.twig
+++ b/src/AppBundle/Resources/views/Observation/observation.html.twig
@@ -9,21 +9,39 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyB1Z4LA0_Q-qH3Sfq-vIr3lShYnIwS1KUw&libraries=places">
     </script> 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
-    <div id="map" style="width: 500px; height: 250px;"></div>
-    {{ form_start(form) }}
-    {{ form_errors(form) }}
-    {{ form_row(form.longitude, { 'label_attr': {'class': 'longitude'} }) }}
-    {{ form_row(form.lattitude, { 'label_attr': {'class': 'lattitude'} }) }}
-    {{ form_row(form.birdName) }}
-    {{ form_row(form.date) }}
-    {{ form_row(form.comment) }}
-    {{ form_row(form.image) }}
-    <img id="aperçuImage" src="#" />
-    {{ form_row(form.save) }}
-    {{ form_rest(form) }}
-    {{ form_end(form) }}
+    <div id="containerObservation">
+      <div id="map" style="height: 500px;"></div>
+        {{ form_start(form) }}
+        {{ form_errors(form) }}
+        {{ form_row(form.longitude, { 'label_attr': {'class': 'longitude'} }) }}
+        {{ form_row(form.lattitude, { 'label_attr': {'class': 'lattitude'} }) }}
+      <div id="birdName">
+        {{ form_row(form.birdName) }}
+        <hr >
+      </div>
+      <div id="date">
+        {{ form_row(form.date) }}
+         <hr>
+      </div>
+      <div id="comment">
+        {{ form_row(form.comment) }}
+         <hr/>
+      </div>
+      <div id="image">
+        {{ form_row(form.image) }}
+        <img id="aperçuImage" src="#" />
+        <hr>
+      </div>
+      <div id="save">
+        {{ form_row(form.save) }}
+        <hr>
+      </div>
+        {{ form_rest(form) }}
+        {{ form_end(form) }}
+    </div>
 
   <script src="{{asset('bundles/app/js/datepicker.js') }}"></script>
   <script>
