--- a/src/AppBundle/Resources/views/Observation/observation.html.twig
+++ b/src/AppBundle/Resources/views/Observation/observation.html.twig
@@ -57,7 +57,7 @@
         }
     }
     
-    $("#observation_image").change(function(){
+    $("#observation_image_file").change(function(){
         readURL(this);
     });
   </script>
