--- a/src/AppBundle/Resources/views/Observation/observation.html.twig
+++ b/src/AppBundle/Resources/views/Observation/observation.html.twig
@@ -98,6 +98,8 @@
   google.maps.event.addDomListener(window, "load", initialize());
 
   function initMap() {
+
+          $('div#map').hide(1000);
           var map = new google.maps.Map(document.getElementById('map'), {
             center: {lat: 48.862725, lng: 2.287592000000018},
             zoom: 6
