--- a/src/AppBundle/Resources/views/Observation/observation.html.twig
+++ b/src/AppBundle/Resources/views/Observation/observation.html.twig
@@ -13,9 +13,10 @@
   </head>
   <body>
     <div id="containerObservation">
-      <div id="map" style="display:none; height: 500px;"></div>
-      <input type="button" value="Afficher la carte" onclick="show()" />
+      <div id="map"></div>
+      <div id="expand-map">Expand</div>
       <input type="button" value="Se géolocaliser" onclick="initMap()" />
+      <input type="button" value="Se géser" onclick="ioo()" />
         {{ form_start(form) }}
         {{ form_errors(form) }}
         {{ form_row(form.longitude, { 'label_attr': {'class': 'longitude'} }) }}
@@ -64,26 +65,28 @@
     });
   </script>
   <script>
-  function show() {
+  function initialize() {
 
-    $('div#map').show(1000);
+var myLatLng = new google.maps.LatLng(-34.1840517,150.7131903);
+var mapOptions = {
+    zoom: 17,
+    center: myLatLng,
+    disableDefaultUI: true,
+    mapTypeControl: true,
+    mapTypeControlOptions: {
+        style: google.maps.MapTypeControlStyle.HORIZONTAL_BAR,
+        position: google.maps.ControlPosition.BOTTOM_LEFT
+    }
 
-    var myLatlng = new google.maps.LatLng(48.862725, 2.287592000000018);
-
-    var myOptions = {
-      zoom: 8,
-      center: myLatlng,
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-    };
-
-    var map = new google.maps.Map(document.getElementById("map"), myOptions);
+};
+map = new google.maps.Map(document.getElementById('map'), mapOptions);
     var marker = new google.maps.Marker({
       draggable: true,
-      position: myLatlng,
+      position: myLatLng,
       map: map,
       title: "Your location"
     });
-
+google.maps.event.trigger(map, 'resize');
     google.maps.event.addListener(marker, 'dragend', function(event) {
       document.getElementById("observation_longitude").value = event.latLng.lat();
       document.getElementById("observation_lattitude").value = event.latLng.lng();
@@ -95,16 +98,21 @@
       marker.setPosition(event.latLng);
     });
   }
-  google.maps.event.addDomListener(window, "load", initialize());
+
+  function ioo() {
+    
+        $("#map").animate({"height" : "500px"}, 500,function(){
+        //google.maps.event.trigger(map, "bounds_changed");
+            initialize();
+        });
+        
+
+};
 
   function initMap() {
 
-          $('div#map').hide(1000);
-          var map = new google.maps.Map(document.getElementById('map'), {
-            center: {lat: 48.862725, lng: 2.287592000000018},
-            zoom: 6
-          });
-          var infoWindow = new google.maps.InfoWindow({map: map});
+           $("#map").animate({"height" : "0px"});
+  
 
           // Try HTML5 geolocation.
           if (navigator.geolocation) {
@@ -117,10 +125,6 @@
           document.getElementById("observation_longitude").value = position.coords.latitude,
           document.getElementById("observation_lattitude").value = position.coords.longitude
 
-
-              infoWindow.setPosition(pos);
-              infoWindow.setContent('Location found.');
-              map.setCenter(pos);
             }, function() {
               handleLocationError(true, infoWindow, map.getCenter());
             });
