--- a/src/AppBundle/Resources/views/Observation/observation.html.twig
+++ b/src/AppBundle/Resources/views/Observation/observation.html.twig
@@ -46,101 +46,10 @@
         {{ form_end(form) }}
     </div>
 
-  <script src="{{asset('bundles/app/js/datepicker.js') }}"></script>
-  <script>
-  function readURL(input) {
-        if (input.files && input.files[0]) {
-            var reader = new FileReader();
-            
-            reader.onload = function (e) {
-                $('#aperçuImage').attr('src', e.target.result);
-            }
-            
-            reader.readAsDataURL(input.files[0]);
-        }
-    }
-    
-    $("#observation_image_file").change(function(){
-        readURL(this);
-    });
-  </script>
-  <script>
-  function initialize() {
-
-var myLatLng = new google.maps.LatLng(-34.1840517,150.7131903);
-var mapOptions = {
-    zoom: 17,
-    center: myLatLng,
-    disableDefaultUI: true,
-    mapTypeControl: true,
-    mapTypeControlOptions: {
-        style: google.maps.MapTypeControlStyle.HORIZONTAL_BAR,
-        position: google.maps.ControlPosition.BOTTOM_LEFT
-    }
-
-};
-map = new google.maps.Map(document.getElementById('map'), mapOptions);
-    var marker = new google.maps.Marker({
-      draggable: true,
-      position: myLatLng,
-      map: map,
-      title: "Your location"
-    });
-google.maps.event.trigger(map, 'resize');
-    google.maps.event.addListener(marker, 'dragend', function(event) {
-      document.getElementById("observation_longitude").value = event.latLng.lat();
-      document.getElementById("observation_lattitude").value = event.latLng.lng();
-    });
-
-    google.maps.event.addListener(map, 'click', function(event) {
-      document.getElementById("observation_longitude").value = event.latLng.lat();
-      document.getElementById("observation_lattitude").value = event.latLng.lng();
-      marker.setPosition(event.latLng);
-    });
-  }
-
-  function ioo() {
-    
-        $("#map").animate({"height" : "500px"}, 500,function(){
-        //google.maps.event.trigger(map, "bounds_changed");
-            initialize();
-        });
-        
-
-};
-
-  function initMap() {
-
-           $("#map").animate({"height" : "0px"});
-  
-
-          // Try HTML5 geolocation.
-          if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(function(position) {
-              var pos = {
-                lat: position.coords.latitude,
-                lng: position.coords.longitude
-              };
-
-          document.getElementById("observation_longitude").value = position.coords.latitude,
-          document.getElementById("observation_lattitude").value = position.coords.longitude
-
-            }, function() {
-              handleLocationError(true, infoWindow, map.getCenter());
-            });
-          } else {
-            // Browser doesn't support Geolocation
-            handleLocationError(false, infoWindow, map.getCenter());
-          }
-        }
-
-        function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-          infoWindow.setPosition(pos);
-          infoWindow.setContent(browserHasGeolocation ?
-                                'Error: The Geolocation service failed.' :
-                                'Error: Your browser doesn\'t support geolocation.');
-        }
-    </script>
+    <script src="{{asset('bundles/app/js/datepicker.js') }}"></script>
+    <script src="{{asset('bundles/app/js/previewImage.js') }}"></script>
+    <script src="{{asset('bundles/app/js/geolocation.js') }}"></script>
+    <script src="{{asset('bundles/app/js/marker.js') }}"></script>
   </body>
 </html>
 
