--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ app.request.locale|split('_')[0] }}">
     <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>
+            {% block title %}
+                {{ 'core.site.title'|trans }}
+            {% endblock %}
+        </title>
+
+        {% block meta %}
+        {% endblock %}
+
+        <link rel="shortcut icon" href="http://assets.fhuszti.tech/favicon.ico" type="image/x-icon" />
+
+        {% block stylesheets %}
+            {% stylesheets filter='cssrewrite, ?scssphp'
+                '//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'
+                '//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css' %}
+                <link rel="stylesheet" href="{{ asset_url }}" type="text/css">
+            {% endstylesheets %}
+        {% endblock %}
+
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
     </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+
+    <body role="document">
+        <div class="container">
+            {{ include('header.html.twig') }}
+
+            <div id="wrapper" role="main">
+                {% block body %}
+                {% endblock %}
+            </div>
+
+            {{ include('footer.html.twig') }}
+        </div>
+
+        {% block javascripts %}
+            {% javascripts
+                '//code.jquery.com/jquery-3.2.1.min.js'
+                '//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'
+                '//code.jquery.com/ui/1.12.1/jquery-ui.js' %}
+                <script type="text/javascript" src="{{ asset_url }}"></script>
+            {% endjavascripts %}
+        {% endblock %}
     </body>
 </html>
