--- a/src/AppBundle/Resources/views/Observation/observation.html.twig
+++ b/src/AppBundle/Resources/views/Observation/observation.html.twig
@@ -18,14 +18,14 @@
       <div id="map"></div>
       <div class="row">
         <div class="col-lg-6">
-          <a href="" type="button"  onclick="initMap()">
+          <a href="#" type="button"  onclick="initMap()">
             <div id="buttonGeolocation">
               <p></p>          
             </div>
           </a>
         </div>
         <div class="col-lg-6">
-          <a href="" type="button"  onclick="ioo()">
+          <a href="#" type="button"  onclick="ioo()">
             <div id="buttonDisplayMap">
               <p></p>          
             </div>
