--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -1,5 +1,5 @@
 <footer class="navbar navbar-default" id="footer">
-	<div class="col-xs-12 col-sm-push-7 col-sm-5">
+	<div class="col-xs-12 col-sm-push-7 col-sm-5" id="footer_right-links">
 		<a href="{{ path('core_home') }}" title="{{ 'core.footer.right_links.legal.title'|trans }}">
 	      	{{ 'core.footer.right_links.legal.link'|trans }}
 	    </a>
@@ -13,14 +13,16 @@
 	    </a>
 	</div>
 
-	<div class="hidden-xs col-sm-2" id="footer-logo">
-		{% image 'http://assets.fhuszti.tech/nao/logo.png' %}
-        	<img src="{{ asset_url }}" alt="{{ 'core.site.logo'|trans }}" />
-        {% endimage %}
+	<div class="hidden-xs col-sm-2" id="footer_logo">
+		<a href="{{ path('core_home') }}" title="{{ 'core.site.logo'|trans }}">
+			{% image 'http://assets.fhuszti.tech/nao/logo.png' %}
+	        	<img src="{{ asset_url }}" alt="{{ 'core.site.logo'|trans }}" />
+	        {% endimage %}
+        </a>
 	</div>
 
 	<div class="col-xs-12 col-sm-pull-7 col-sm-5">
-		<div class="hidden-xs col-sm-12">
+		<div class="hidden-xs col-sm-12" id="footer_left-links">
 			<a href="{{ path('core_home') }}" title="{{ 'core.footer.left_links.search.title'|trans }}">
 		      	{{ 'core.footer.left_links.search.link'|trans }}
 		    </a>
@@ -34,6 +36,8 @@
 		    </a>
 		</div>
 
-		{{ 'core.footer.copyright'|trans }}
+		<div class="col-xs-12" id="footer_copyright">
+			{{ 'core.footer.copyright'|trans }}
+		</div>
 	</div>
 </footer>
