--- a/web/bundles/app/css/footer.css
+++ b/web/bundles/app/css/footer.css
@@ -2,6 +2,13 @@
 	padding: 10px 20px;
 	margin: 0;
 	background-color: #fff;
+	height: 100%;
+	max-height: 160px;
+}
+
+#footer a {
+	color: #888;
+	margin: 0 10px;
 }
 
 
@@ -9,13 +16,26 @@
 
 
 
+#footer_left-links {
+	font-size: 1.3em;
+	padding-top: 10px;
+}
+#footer_copyright {
+	margin-top: 10px;
+}
 
-#footer-logo {
+#footer_logo {
 	text-align: center;
 }
 #footer img {
 	max-width: 95%;
-	max-height: 95%;
+	max-height: 140px;
+}
+
+#footer_right-links {
+	font-size: 1.2em;
+	text-align: center;
+	padding-top: 30px;
 }
 
 
@@ -24,9 +44,13 @@
 
 
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
 	#footer {
 		background-color: #f8f8f8;
 		text-align: center;
+	}
+
+	#footer_right-links {
+		padding-top: 0;
 	}
 }
