réglage des bugs, des routes et de la view

--- a/app/Resources/views/core/find.html.twig
+++ b/app/Resources/views/core/find.html.twig
@@ -1,8 +1,6 @@
-{% extends 'base.html.twig' %}
-
+{% extends 'layout.html.twig' %}
+{% set homepage = true %}
 {% block body %}
     page de recherche
 {% endblock %}
 
-{% block stylesheets %}
-{% endblock %}
