--- a/src/UserBundle/Resources/views/Security/login_content.html.twig
+++ b/src/UserBundle/Resources/views/Security/login_content.html.twig
@@ -1,24 +1,85 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-<h1>CONNEXION</h1>
+<div class="col-xs-12" id="login_title">
+	<div class="col-xs-10 col-sm-6">
+		<h1>CONNEXION</h1>
+	</div>
+
+	<div class="hidden-xs col-sm-2" id="login_title-icon">
+
+	</div>
+</div>
 
 {% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    <div class="alert alert-warning">
+    	{{ error.messageKey|trans(error.messageData, 'security') }}
+    </div>
 {% endif %}
 
-<form action="{{ path("fos_user_security_check") }}" method="post">
-    {% if csrf_token %}
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-    {% endif %}
+<div class="col-xs-12 well" id="login_content">
+	<div id="login_btn-register" class="row">
+		<a href="{{ path('fos_user_registration_register') }}" title="Créer un compte" class="btn btn-success">
+			Créer un compte
+		</a>
+	</div>
 
-    <label for="username">{{ 'security.login.username'|trans }}</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+	<form action="{{ path("fos_user_security_check") }}" method="post" class="form-horizontal">
+	    {% if csrf_token %}
+	        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+	    {% endif %}
 
-    <label for="password">{{ 'security.login.password'|trans }}</label>
-    <input type="password" id="password" name="_password" required="required" />
+	    <div class="form-group">
+		    <label for="username" class="col-sm-4">{{ 'security.login.username'|trans }}</label>
+		    <div class="col-sm-8">
+		    	<input type="text" id="username" name="_username" value="{{ last_username }}" required="required" class="col-sm-6" />
+		    </div>
+	    </div>
 
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+	    <div class="form-group">
+		    <label for="password" class="col-sm-4">{{ 'security.login.password'|trans }}</label>
+		    <div class="col-sm-8">
+		    	<input type="password" id="password" name="_password" required="required" class="col-sm-6" />
+		    </div>
+	    </div>
 
-    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
-</form>
+		<div class="form-group" id="login_remember-group">
+	    	<label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+	    	<input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+		</div>
+	    
+	    <div class="form-group" id="login_submit-group">
+	    	<input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" class="btn btn-default" />
+	    </div>
+
+		<div data-toggle="modal" href="#login_forgotten-pass-modal" id="login_forgotten-pass-link">
+			<a>Mot de passe oublié ?</a>
+		</div>
+
+		<div class="modal fade" id="login_forgotten-pass-modal">
+		  	<div class="modal-dialog">
+			    <div class="modal-content">
+			      	<div class="modal-header">
+			        	<button type="button" class="close" data-dismiss="modal">x</button>
+			        	<h4 class="modal-title">Réinitialiser son mot de passe</h4>
+			        </div>
+			      	
+			      	<div class="modal-body">
+			      		Nous allons vous envoyer un email afin de confirmer votre identité, puis nous réinitialiserons votre mot de passe.
+
+			      		<div class="form-group">
+						    <label for="modal-email" class="col-sm-4">{{ 'security.login.username'|trans }}</label>
+						    <div class="col-sm-8">
+						    	<input type="text" id="modal-email" name="modal-email" placeholder="{{ 'security.login.username'|trans }}" required="required" class="col-sm-6" />
+						    </div>
+					    </div>
+	    
+					   	<button type="button" class="btn btn-warning" id="login_modal-button">Réinitialiser</button>
+
+			      	</div>
+
+			    </div>
+		  	</div>
+		</div>
+
+	</form>
+</div>
