--- a/src/UserBundle/Resources/views/Security/login_content.html.twig
+++ b/src/UserBundle/Resources/views/Security/login_content.html.twig
@@ -1,8 +1,6 @@
-{% trans_default_domain 'FOSUserBundle' %}
-
 <div class="col-xs-12" id="login_title">
 	<div class="col-xs-10 col-sm-6">
-		<h1>CONNEXION</h1>
+		<h1>{{ 'core.login.title'|trans|upper }}</h1>
 	</div>
 
 	<div class="hidden-xs col-sm-2" id="login_title-icon">
@@ -18,8 +16,8 @@
 
 <div class="col-xs-12 well" id="login_content">
 	<div id="login_btn-register" class="row">
-		<a href="{{ path('fos_user_registration_register') }}" title="Créer un compte" class="btn btn-success">
-			Créer un compte
+		<a href="{{ path('fos_user_registration_register') }}" title="{{ 'core.login.register_button'|trans }}" class="btn btn-success">
+			{{ 'core.login.register_button'|trans }}
 		</a>
 	</div>
 
@@ -29,30 +27,30 @@
 	    {% endif %}
 
 	    <div class="form-group">
-		    <label for="username" class="col-sm-4">{{ 'security.login.username'|trans }}</label>
+		    <label for="username" class="col-sm-4">{{ 'core.login.email.label'|trans }}</label>
 		    <div class="col-sm-8">
-		    	<input type="text" id="username" name="_username" value="{{ last_username }}" required="required" class="col-sm-6" />
+		    	<input type="text" id="username" name="_username" value="{{ last_username }}" placeholder="{{ 'core.login.email.placeholder'|trans }}" required="required" class="col-sm-6" />
 		    </div>
 	    </div>
 
 	    <div class="form-group">
-		    <label for="password" class="col-sm-4">{{ 'security.login.password'|trans }}</label>
+		    <label for="password" class="col-sm-4">{{ 'core.login.password.label'|trans }}</label>
 		    <div class="col-sm-8">
-		    	<input type="password" id="password" name="_password" required="required" class="col-sm-6" />
+		    	<input type="password" id="password" name="_password" placeholder="{{ 'core.login.password.placeholder'|trans }}" required="required" class="col-sm-6" />
 		    </div>
 	    </div>
 
 		<div class="form-group" id="login_remember-group">
-	    	<label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+	    	<label for="remember_me">{{ 'core.login.remember_me'|trans }}</label>
 	    	<input type="checkbox" id="remember_me" name="_remember_me" value="on" />
 		</div>
 	    
 	    <div class="form-group" id="login_submit-group">
-	    	<input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" class="btn btn-default" />
+	    	<input type="submit" id="_submit" name="_submit" value="{{ 'core.login.submit'|trans }}" class="btn btn-default" />
 	    </div>
 
 		<div data-toggle="modal" href="#login_forgotten-pass-modal" id="login_forgotten-pass-link">
-			<a>Mot de passe oublié ?</a>
+			<a>{{ 'core.login.forgotten_pass'|trans }}</a>
 		</div>
 
 		<div class="modal fade" id="login_forgotten-pass-modal">
@@ -60,20 +58,22 @@
 			    <div class="modal-content">
 			      	<div class="modal-header">
 			        	<button type="button" class="close" data-dismiss="modal">x</button>
-			        	<h4 class="modal-title">Réinitialiser son mot de passe</h4>
+			        	<h4 class="modal-title">{{ 'core.login.modal.title'|trans }}</h4>
 			        </div>
 			      	
 			      	<div class="modal-body">
-			      		Nous allons vous envoyer un email afin de confirmer votre identité, puis nous réinitialiserons votre mot de passe.
+			      		{{ 'core.login.modal.content'|trans }}
 
 			      		<div class="form-group">
-						    <label for="modal-email" class="col-sm-4">{{ 'security.login.username'|trans }}</label>
+						    <label for="modal-email" class="col-sm-4">{{ 'core.login.email.label'|trans }}</label>
 						    <div class="col-sm-8">
-						    	<input type="text" id="modal-email" name="modal-email" placeholder="{{ 'security.login.username'|trans }}" required="required" class="col-sm-6" />
+						    	<input type="text" id="modal-email" name="modal-email" placeholder="{{ 'core.login.email.placeholder'|trans }}" required="required" class="col-sm-6" />
 						    </div>
 					    </div>
 	    
-					   	<button type="button" class="btn btn-warning" id="login_modal-button">Réinitialiser</button>
+					   	<button type="button" class="btn btn-warning" id="login_modal-button">
+					   		{{ 'core.login.modal.button'|trans }}
+					   	</button>
 
 			      	</div>
 
