Début de mise en place du système de reset de mot de passe

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -56,7 +56,7 @@
         </div>
 
         {% block javascripts %}
-            {% javascripts
+            {% javascripts filter='?jsqueeze'
                 '//code.jquery.com/jquery-3.2.1.min.js'
                 '//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'
                 '//code.jquery.com/ui/1.12.1/jquery-ui.js' %}
