--- a/src/UserBundle/Resources/views/Security/login_content.html.twig
+++ b/src/UserBundle/Resources/views/Security/login_content.html.twig
@@ -49,8 +49,10 @@
 	    	<input type="submit" id="_submit" name="_submit" value="{{ 'core.login.submit'|trans }}" class="btn btn-default" />
 	    </div>
 
+	</form>
+
 		<div data-toggle="modal" href="#login_forgotten-pass-modal" id="login_forgotten-pass-link">
-			<a>{{ 'core.login.forgotten_pass'|trans }}</a>
+			<a id="login_forgotten-link" data-action="{{ path('fos_user_resetting_request') }}">{{ 'core.login.forgotten_pass'|trans }}</a>
 		</div>
 
 		<div class="modal fade" id="login_forgotten-pass-modal">
@@ -61,25 +63,11 @@
 			        	<h4 class="modal-title">{{ 'core.login.modal.title'|trans }}</h4>
 			        </div>
 			      	
-			      	<div class="modal-body">
-			      		{{ 'core.login.modal.content'|trans }}
-
-			      		<div class="form-group">
-						    <label for="modal-email" class="col-sm-4">{{ 'core.login.email.label'|trans }}</label>
-						    <div class="col-sm-8">
-						    	<input type="text" id="modal-email" name="modal-email" placeholder="{{ 'core.login.email.placeholder'|trans }}" required="required" class="col-sm-6" />
-						    </div>
-					    </div>
-	    
-					   	<button type="button" class="btn btn-warning" id="login_modal-button">
-					   		{{ 'core.login.modal.button'|trans }}
-					   	</button>
-
+			      	<div class="modal-body" id="login_forgotten-pass-modal-body">
+			      		<!-- filled with AJAX -->
 			      	</div>
 
 			    </div>
 		  	</div>
 		</div>
-
-	</form>
 </div>
