--- a/web/bundles/app/css/login.css
+++ b/web/bundles/app/css/login.css
@@ -66,6 +66,16 @@
 #login_content .modal-body {
 	text-align: center;
 }
+#login_content #login_forgotten-pass-modal-button {
+	min-width: 100px;
+}
+.btn-loading {
+  animation: spin 2s linear infinite;
+}
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 
 
 
