--- a/web/bundles/app/css/main.css
+++ b/web/bundles/app/css/main.css
@@ -36,7 +36,28 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Lane Narrow Regular', 'OpenSans Regular', Arial, Helvetica, Verdana, Times, "Times New Roman", sans-serif;
 }
 
+a {
+  color: #888;
+}
+
 #wrapper {
   margin-top: 48px;
   margin-bottom: 48px;
 }
+
+.nao_title, .nao_title>div:first-child {
+  padding-left: 0;
+}
+.nao_title h1 {
+  border-bottom: 3px solid green;
+  margin: 0;
+  padding-bottom: 5px;
+}
+.nao_title-icon {
+  width: 51px;
+  height: 51px;
+  border: 1px solid black;
+  border-radius: 25px;
+}
+
+
