--- a/src/UserBundle/Resources/views/Security/login_content.html.twig
+++ b/src/UserBundle/Resources/views/Security/login_content.html.twig
@@ -1,9 +1,9 @@
-<div class="col-xs-12" id="login_title">
+<div class="col-xs-12 nao_title">
 	<div class="col-xs-10 col-sm-6">
 		<h1>{{ 'core.login.title'|trans|upper }}</h1>
 	</div>
 
-	<div class="hidden-xs col-sm-2" id="login_title-icon">
+	<div class="hidden-xs col-sm-2 nao_title-icon">
 
 	</div>
 </div>
