--- a/web/bundles/app/css/login.css
+++ b/web/bundles/app/css/login.css
@@ -35,6 +35,7 @@
 
 #login_content #login_forgotten-pass-link {
 	margin-bottom: 30px;
+	margin-top: 40px;
 	text-align: left;
 }
 #login_content .modal {
@@ -87,9 +88,24 @@
 		padding-left: 0;
 		padding-right: 0;
 	}
-
 	h1 {
 		font-size: 2em;
 		padding-left: 20px;
+	}
+
+	#login_content form {
+		text-align: left;
+	}
+	#login_content form label {
+		margin-bottom: 15px;
+	}
+	#login_content .modal .form-group {
+		text-align: left;
+	}
+	#login_content .modal [type="text"] {
+		width: 100%;
+	}
+	#login_content form div:last-child {
+		text-align: center;
 	}
 }
