--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -27,6 +27,7 @@
             {% endstylesheets %}
         {% endblock %}
 
+
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -62,6 +63,8 @@
                 '//code.jquery.com/ui/1.12.1/jquery-ui.js' %}
                 <script type="text/javascript" src="{{ asset_url }}"></script>
             {% endjavascripts %}
+        {% endblock %}
+        {% block script %}
         {% endblock %}
     </body>
 </html>
