--- a/src/AppBundle/Resources/views/Observation/observation.html.twig
+++ b/src/AppBundle/Resources/views/Observation/observation.html.twig
@@ -17,14 +17,14 @@
     <div id="containerObservation">
       <div id="map"></div>
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-xs-6">
           <a href="#" type="button"  onclick="initMap()">
             <div id="buttonGeolocation">
               <p></p>          
             </div>
           </a>
         </div>
-        <div class="col-lg-6">
+        <div class="col-xs-6">
           <a href="#" type="button"  onclick="ioo()">
             <div id="buttonDisplayMap">
               <p></p>          
@@ -32,6 +32,7 @@
           </a>
         </div>
       </div>
+      <!-- {% form_theme form 'bootstrap_3_layout.html.twig' %} -->
         {{ form_start(form) }}
         {{ form_errors(form) }}
         {{ form_row(form.longitude, { 'label_attr': {'class': 'longitude'} }) }}
@@ -78,14 +79,14 @@
       <div id="image">
         <div class="row">
           <div class="col-lg-12">
-            {{ form_label(form.image) }}
+            {{ form_widget(form.image) }}
           </div>
         </div>
         <div class="row">
           <div class="col-lg-12">
-            {{ form_widget(form.image) }}
+            {{ form_label(form.image) }}
             <div id="imageBlock">
-            <img id="aperçuImage" src="#" />
+            <img id="aperçuImage" src="#" alt="" />
             <hr >
             </div>
           </div>
@@ -97,6 +98,7 @@
       </div>
         {{ form_rest(form) }}
         {{ form_end(form) }}
+
     </div>
   </div>
 
@@ -105,35 +107,38 @@
     <script src="{{asset('bundles/app/js/geolocation.js') }}"></script>
     <script src="{{asset('bundles/app/js/marker.js') }}"></script>
     <script type="text/javascript">
-      $("#observation").submit(function(e) {
+   $("form").on("submit",function(e) {
         e.preventDefault();
-        var donnees = $(this).serialize();
+        // var longitude = $("#observation_longitude").val();
+        // var lattitude = $("#observation_lattitude").val();
+        // var birdName = $("#observation_birdName").val();
+        // var date = $("#observation_date").val();
+        // var comment = $("#observation_comment").val();
+        // var image = $("#observation_image_file").val();
+        // var $this = $(this);
+        var form = $(this);
+        var values = {};   
+        $.each( form.serializeArray(), function(i, field) {    
+         values[field.name] = field.value;   });
+        console.log(form);
+        console.log(values);
         $.ajax({
           url : '{{ path('app_observation') }}',
           type : 'POST', 
-          data : donnees,
-          success : function(){
-
-            // if(data !== null) {
-            $( "#containerObservation" ).hide();
-            // $( "#containerThanks" ).hide();
-
-            // alert('success !!!'+ data);
+          // dataType: "json",
+          data : values,
+          success :function(e) {
+            console.log(e);
+              // $("#containerObservation").hide();
           }
         });
-      });
+        });
     </script>
   </body>
 </html>
 
 
 <!-- {{ form_start(form, { 'attr': {'onsubmit':'validateForm();'} }) }} -->
-<!-- 'observation_longitude=' + observation_longitude + '&observation_lattitude=' + observation_lattitude + '&observation_birdName=' + observation_birdName + '&observation_date=' + observation_date + '&observation_comment=' + observation_comment + '&observation_image=' + observation_image, -->
 
-<!-- // /* VALUES */
-      //  var longitude = $("#observation_longitude").val();
-      //  var lattitude = $("#observation_lattitude").val();
-      //  var birdName = $("#observation_birdName").val();
-      //  var date = $("#observation_date").val();
-      //  var comment = $("#observation_comment").val();
-      //  var image = $("#observation_image").val(); -->
+
+   <!-- 'observation_longitude=' + longitude + '&observation_lattitude=' + lattitude + '&observation_birdName=' + birdName + '&observation_date=' + date + '&observation_comment=' + comment + '&observation_image_file=' + image,    -->
