--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -29,14 +29,14 @@
 	    <div class="form-group">
 		    <label for="username" class="col-sm-4">{{ 'core.login.email.label'|trans }}</label>
 		    <div class="col-sm-8">
-		    	<input type="text" id="username" name="_username" value="{{ last_username }}" placeholder="{{ 'core.login.email.placeholder'|trans }}" required="required" class="col-sm-6" />
+		    	<input type="text" id="username" name="_username" value="{{ last_username }}" placeholder="{{ 'core.login.email.placeholder'|trans }}" required="required" />
 		    </div>
 	    </div>
 
 	    <div class="form-group">
 		    <label for="password" class="col-sm-4">{{ 'core.login.password.label'|trans }}</label>
 		    <div class="col-sm-8">
-		    	<input type="password" id="password" name="_password" placeholder="{{ 'core.login.password.placeholder'|trans }}" required="required" class="col-sm-6" />
+		    	<input type="password" id="password" name="_password" placeholder="{{ 'core.login.password.placeholder'|trans }}" required="required" />
 		    </div>
 	    </div>
 
